suppress email by default
